--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -1773,107 +1773,107 @@ stories:
   domain: http://www.boston.com/
   link: https://www.boston.com/news/media/2019/12/24/christian-post-christianity-today-trump
 images:
-- name: stalin-time-lincoln-sitting-front.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-lincoln-sitting-front.jpg
-- name: stalin-time-jesus-in-old-rock-church.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-jesus-in-old-rock-church.jpg
-- name: razorcliff-razorcliff-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-deep-connections.jpg
-- name: berlinwall-DSC-0084-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dali-three.jpg
+- name: capital-battle-capitolbattle-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-pond.jpg
+- name: nazi-invasion-desert-road-mountains.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-desert-road-mountains.jpg
+- name: catacombs-catacombs-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dali-three.jpg
+- name: nazi-invasion-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-google-front-of-business.jpg
+- name: school-clouds-church-clouds-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-bright-sand.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
+- name: crow-crow-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dark-rain.jpg
+- name: old-gas-pumps-oldgaspumps-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-circuit.jpg
+- name: windowmountain-window-mountain-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colored-circuits.jpg
+- name: abandonedbuildings_atari_asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_atari_asteroids.jpg
+- name: oldcabin-oldcabin-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-cinnamon-rolls.jpg
+- name: border-crossing-bordercrossing.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing.png
+- name: copper-circuit-walking-water-front-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-walking-water-front-sun.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-smoking-cigarette.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-oily-mcoilface.jpg
+- name: bordercrossing-bordercrossing-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-gan-vogh.jpg
+- name: trucksilo-trucksilo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-emily-carr.jpg
+- name: berlinwall-DSC-0084-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gan-vogh.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-kand-two.jpg
+- name: razorwire-DSC-0080-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-crabapple.jpg
+- name: aws-s3-square-97-193-800-500-0-max-0-1--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-97-193-800-500-0-max-0-1--1-square.jpg
+- name: adam-smith-adam-smith-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-green-zuma.jpg
+- name: yosemite-yosemite-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crafty-painting.jpg
+- name: window-window-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-umberto-bocc.jpg
+- name: store-on-corner-store-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-bright-sand.jpg
+- name: aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
+- name: downtown-los-angeles-downtown-la-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-alberto-giacometti.JPG
+- name: copper-circuit-san-francisco-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-skyline.jpg
+- name: adam-smith-adam-smith-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-missle.jpg
+- name: old-house-oldhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-deep-connections.jpg
+- name: bordercrossing-bordercrossing-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-dresden.jpg
+- name: nazi-invasion-subway-brooklyn-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-subway-brooklyn-station.jpg
+- name: oldhouse-granaryfield-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-space-pizza.jpg
+- name: liberty-back-statue-liberty-back-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-mucha-mult.jpg
 - name: christianity-christianity-under-construction-purple-storm.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-purple-storm.jpg
-- name: nazi-invasion-ellis-island-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-ellis-island-windows.jpg
-- name: dragon-desert-desert-dragon-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kand-two.jpg
-- name: old-granary-field-oldhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-three.jpg
-- name: stories-new-59-124-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-59-124-800-500-0-max-0--5--5.jpg
-- name: old-barn-old-barn-1500-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dali-two.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dark-soul.jpg
-- name: docks-docks-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-creativity.jpg
-- name: blossombar-cinnamon-rolls-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-cinnamon-rolls-file-00-00-24-99.jpg
-- name: la-muse-hotel-down-sidewalk.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hotel-down-sidewalk.jpg
-- name: stories-36698086536-f214416faf-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36698086536-f214416faf-z.jpg
-- name: la-muse-freeway-carss-overpass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-freeway-carss-overpass.jpg
-- name: window-window-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-green-zuma.jpg
-- name: locked-up-steam-lock-up-steam-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-wols.jpg
-- name: flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
-- name: yosemite-yosemite-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-nazi-poster.jpg
-- name: eduardo-eduardo-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-alien-goggles.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
-- name: blossombar-yellow-collage-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-24-99.jpg
-- name: death-valley-death-valley-national-park-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-umberto-bocc.jpg
-- name: old-granary-field-oldhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-kand-two.jpg
-- name: christianity-christianity-under-construction-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-neo-instinct.jpg
-- name: aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-diego-rivera1.jpg
-- name: stalin-time-train-tracks-bending.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-tracks-bending.jpg
-- name: white-house-lawn-white-house-lawn-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-two.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-soul.jpg
-- name: border-fence-border-fence-on-hill-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-spagetti-accident.jpg
-- name: bluelake-colorful-blocks-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-01-17-38.jpg
-- name: abe-lincoln-one-smooth-ride-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-00-00.jpg
-- name: copper-circuit-DSC_0001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0001.jpg
-- name: scream-IMG_8313.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8313.jpg
-- name: abandonedbuildings_blue_electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_electricity.jpg
-- name: supreme-court-supremecourt-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dry-skin.jpg
-- name: blossombar-colorful-dream-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-24-99.jpg
-- name: copper-circuit-roman-marcus-looking-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-roman-marcus-looking-down.jpg
-- name: cargo-ship-cargo-ship-on-sea-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-diego-rivera1.jpg
-- name: downtown-los-angeles-downtown-la-hot-spicy.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-hot-spicy.JPG
-- name: locked-up-steam-lock-up-steam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam.jpg
-- name: powerlines-power-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-brush.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crabapple.jpg
-- name: status-berlin-status-berlin-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-clean-view.jpg
-- name: sand-hand-sand-hand-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smoking-cigarette.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
-- name: copper-circuit-seattle-looking-north.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-looking-north.jpg
-- name: razorwire-DSC-0080-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-green-zuma.jpg
-- name: supreme-court-supremecourt-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-creativity.jpg
-- name: stalin-time-freeway-carss-overpass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-freeway-carss-overpass.jpg
+- name: old-barn-old-barn-1500-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-diego-rivera1.jpg
+- name: cargo-ship-cargo-ship-on-sea-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dali-three.jpg
+- name: downtown-los-angeles-downtown-la-umberto-bocc.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-umberto-bocc.JPG
+- name: miamibeach-miamibeach-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-circuit.jpg
+- name: braceros-domingo-ulloa-city-clouds-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-city-clouds-waterfront.jpg
+- name: oldtrain-oldtrain-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-ww2-color.jpg
+- name: crow-crow-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-three.jpg
+- name: aws-s3-deserthills-deserthills-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still-600.jpg
+- name: downtheline-downtheline-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-nazi-poster.jpg
+- name: bf-skinner-working-on-railroad-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-2.jpg
+- name: bordercrossing-bordercrossing-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purple-pond.jpg
+- name: oldhousecars-house-old-cars-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-diego-rivera1.jpg
+- name: copper-circuit-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-container-several-colors-grey.jpg
+- name: oldcabin-oldcabin-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-brush.jpg
+- name: christianity-christianity-under-construction-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-sand-paper.jpg
 ---
 Boesl Families Lifted Up In Prayer.&nbsp;Songwriter Allee Willis, Who Did Friends Theme, Dies.&nbsp;Shop With A Hero A Positive Program.&nbsp;Two More Ways To Follow Us.&nbsp;Texas Migrant Helper Released From Mexico After Detention.&nbsp;Prep Football Player Of The Year Finalists Named.&nbsp;Wealaka Chapter Celebrates 10th Year.&nbsp;Festival Of Trees Spruces Up Moffat County Courthouse Into January.&nbsp;
